# secure_protocal

./: .gitignore  Cargo.toml
src/: cert_mod.rs  client.rs  client_server_functions.rs  nonce.txt  server.rs  test_server_private_key.pem  test_server_public_key.pem  user_id.txt
src/cert_mod/: Nonce.txt  auth.rs  cert.rs  decrypt_encrypt.rs
src/client_server_functions/: client_function.rs  decryption_module.rs  encryption_module.rs  server_function.rs  session_key_functions.rs  utilities_functions.rs
