[package]
name = "assignmnet_comsec"
version = "0.1.0"
edition = "2021"

[dependencies]

rcgen = "0.13.2"
sha256 = "1.6.0"
chrono = "0.4"
rand = "0.9.0"
openssl = "0.10.72"
base64 = "0.22.1"
sha2="0.10.8"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.21.3"
aes-gcm = "0.10"
aes = "0.8"
aead = "0.5"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

